# freelance-organizer

./: .gitignore  Dockerfile  Makefile  TODO.md  db-tmp-backup.sh  docker-compose.yml  docker-run.sh  freelance-manager.desktop  make-release-archive.sh  manage.py  pyproject.toml  pytest.ini  requirements_dev.txt  run-docker-localdb.sh  run-in-docker.sh  run-production.sh
docker/: Dockerfile  docker-compose.yml  docker-run.sh  run-app.sh
freelance_organizer/: urls.py  wsgi.py
freelance_organizer/settings/: default.py  production.py
freelance_organizer/templates/admin/timetracker/timeslice/: change_list.html
simple_crm/: admin.py  apps.py  models.py
simple_crm/migrations/: 0001_initial.py  0002_auto_20180411_2214.py
timetracker/: admin.py  importer.py  models.py
timetracker/management/commands/: import.py
timetracker/migrations/: 0001_initial.py  0002_auto_20160331_2203.py  0003_project_is_active.py  0004_auto_20160522_2239.py  0005_auto_20180411_2214.py  0006_timeslice_is_checked_after_import_and_more.py
timetracker/templates/: admin_change_list.html
timetracker/tests/: import.tsv  test_admin.py  test_import.py  test_models.py
travel_log/: admin.py  models.py
travel_log/migrations/: 0001_initial.py
