[tool.poetry]
name = "freelance-organizer"
version = "0.1.0"
description = ""
authors = ["Henning Sprang <henning.sprang@gmail.com>"]
readme = "README.md"
packages = [{include = "freelance_organizer"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "3.5.0"
pytest = "3.5.0"
pytest-django = "3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
