[tool.poetry]
name = "freelance-organizer"
version = "0.1.0"
description = ""
authors = ["Henning Sprang <henning.sprang@gmail.com>"]
readme = "README.md"
packages = [
    {include = "freelance_organizer"},
    {include = "simple_crm"},
    {include = "timetracker"},
    {include = "travel_log"},

]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.22"
tzdata = "^2023.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
six = "^1.16.0"
pytest-flake8 = "^1.1.1"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
